add styles for links and fonts

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       content="Atulyam 2023 - A cultural fest of NITAP"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600&family=Roboto:wght@100;300;400&family=Staatliches&family=Yeseva+One&display=swap" rel="stylesheet">
+
     <title>Atulyam 2023</title>
   </head>
   <body>
