minor fixes in footer
remove yesava font and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;350;400;500;600&family=Open+Sans:wght@300;400;500;600&family=Roboto+Mono:wght@300;400;500;600&family=Roboto:wght@100;300;400&family=Staatliches&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;350;400;500;600&family=Open+Sans:wght@300;400;500;600&family=Roboto+Mono:wght@300;400;500;600&family=Roboto:wght@100;300;400&family=Staatliches&display=swap" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Atulyam 2023</title>
   </head>
